--- a/app/webroot/css/v2/style_v1.css
+++ b/app/webroot/css/v2/style_v1.css
@@ -108,7 +108,7 @@ a.shop>i{font-size:20px;color:#fff;}
 .menu > li > a:focus,
 .menu > li:hover > a{color:rgb(181,67,33);-webkit-transition:all .2s ease-out;transition:all .2s ease-out;}
 .submenu,
-.submenu .submenu{list-style:none;margin:0;padding:0;display:none;position:absolute;z-index:999999;min-width:150px;font-size:13px;word-spacing:1px;color:#dadde2;background-color:#292c31;}
+.submenu .submenu{list-style:none;margin:0;padding:0;display:none;z-index:999999;min-width:150px;font-size:13px;word-spacing:1px;color:#dadde2;}
 .submenu{top:76px;border-top:1px solid rgb(181,67,33);}
 .submenu .submenu{left:150px;top:inherit;margin-top:-1px;}
 .submenu > li{clear:both;width:100%;font-size:12px;}
@@ -1281,7 +1281,11 @@ h4.media-heading{color:#445;font-size:17px;margin:2px 0 6px;}
 }
 .section-testimonials{position:relative;}
 .section-testimonials .fa{right:40px;top:0;font-size:20px;color:#00aac4;}
-@media (max-width:767px){.section-testimonials .fa{right:0;bottom:0;top:auto;}
+@media (max-width:767px){
+	.section-testimonials .fa{right:0;bottom:0;top:auto;}
+	.logo-text {
+		margin: auto;
+	}
 }
 .section-testimonials blockquote{text-align:center;padding:0 40px;margin:0;font-size:17px;border-left:0;line-height:30px;color:#889;font-style:italic;}
 .section-testimonials blockquote p{margin-bottom:30px;}
