--- a/app/webroot/design500/assets/css/system-responsive.css
+++ b/app/webroot/design500/assets/css/system-responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 562px) {
     #topbar {
         height: auto;
     }
@@ -11,7 +11,7 @@
     #topbar #topbar-menu .logo-wrapper {
         /*border-bottom: 1px solid #eee;*/
         margin: 0;
-        position:inherit;
+        /* position:inherit; */
         top: 0;
         width: 100% !important;
         z-index: 111;
@@ -20,7 +20,10 @@
     }
 
     #topbar #topbar-menu .logo-wrapper > li {
-        float: left;
+        width: 100%;
+		display: flex;
+		justify-content: center;
+
     }
 
     #topbar #topbar-menu .logo-wrapper > li.btn-menu-toggle {
@@ -85,9 +88,13 @@
     #topbar #topbar-menu .navbar-right {
         width: 100%;
         margin: 0;
-        margin-top: 60px;
+		margin-top: 40px;
+        /* margin-top: 60px; */
         padding-right: 0;
         float: right;
+		display: flex;
+		justify-content: center;
+		gap: 10px;
     }
 
     #topbar #topbar-menu .navbar-right > li {
@@ -96,6 +103,11 @@
     }
 
     #topbar #topbar-menu .navbar-right > li > a {
+        display: inline-block;
+        padding: 15px !important;
+    }
+
+	#topbar #topbar-menu .navbar-right > li > div {
         display: inline-block;
         padding: 15px !important;
     }
@@ -138,8 +150,10 @@
 
     #wrapper .sidebar-main {
         overflow: hidden;
-        left: -250px;
+        left: -100% ;
+		width: 100%;
         position: absolute;
+		z-index: 9;
     }
 
     #wrapper .page-content {
@@ -409,7 +423,7 @@
     }
 }
 
-@media only screen and (min-width: 481px) and (max-width: 767px) {
+@media only screen and (min-width: 562px) and (max-width: 767px) {
     #topbar {
         height: auto;
     }
@@ -417,14 +431,21 @@
     #topbar #topbar-menu {
         width: 100%;
         margin: 0;
+		display: flex;
+		flex-direction: row;
+
+    }
+
+	#menu-toggle i {
+        font-size: 14px;
     }
 
     #topbar #topbar-menu .logo-wrapper {
         /*border-bottom: 1px solid #eee;*/
         margin: 0;
-        position: fixed;
+        /* position: fixed; */
         top: 0;
-        width: 100% !important;
+        /* width: 100% !important; */
         z-index: 111;
        /* background: #fff;*/
         left: 0;
@@ -496,7 +517,7 @@
     #topbar #topbar-menu .navbar-right {
         width: 45%;
         margin: 0;
-        margin-top: 60px;
+        /* margin-top: 60px; */
         padding-right: 0;
         float: right;
     }
@@ -549,9 +570,9 @@
 
     #wrapper .sidebar-main {
         overflow: hidden;
-        left: -250px;
+        left: -100%;
         position: absolute;
-        display: block !important;
+		z-index: 9;
     }
 
     #wrapper .page-content {
@@ -673,8 +694,9 @@
 
     #wrapper .sidebar-main {
         overflow: hidden;
-        left: -250px;
+        left: -100%;
         position: absolute;
+		width: 100%;
     }
 
     #wrapper .page-content {
@@ -791,4 +813,8 @@
         position: relative;
         z-index: 11;
     }
+}
+
+.hamburger-menu {
+	padding: 19px;
 }
