--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -65,7 +65,7 @@ table tr th a:hover{text-decoration:none;}
 .package-name-list{min-height:78px;}
 .submenu > li >  a.shop {display: none;}
 .exam_name{font-size: 15px;font-weight: bold;margin-bottom: 20px;}
-.exam_value{font-weight: bold;color: #FF9800;}
+.exam_value{font-weight: bold;color: #323335;}
 
 /* 01-03-2024 */
 
