--- a/app/webroot/design500/assets/css/core.css
+++ b/app/webroot/design500/assets/css/core.css
@@ -184,3 +184,10 @@ border-color: #ea2e49;
 			font-size: 10px;
 		}
 	}
+.btn-selected {
+	background-color: #323335;
+}
+
+.btn-unselected {
+	background-color: #777777;
+}
