--- a/app/webroot/css/accordion.css
+++ b/app/webroot/css/accordion.css
@@ -4,6 +4,7 @@ body {
 
 .accordion-panel {
   font-family: Helvetica, Arial, sans-serif;
+	padding:1rem;
 }
 .accordion-panel .accordion {
   padding-top: 30px;
